@@ -1,0 +1,5 @@
+theme /home/keithhedger/.themes/WinterWoodQT
+colour #ff00ff
+gravity 0xfe
+vertical true
+
